--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
         "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
+        "emailjs": "^4.0.3",
         "express": "^4.19.2",
         "express-rate-limit": "^7.2.0",
         "jsonwebtoken": "^9.0.2",
+        "maskdata": "^1.3.1",
         "mongoose": "^8.4.0",
         "morgan": "^1.10.0",
+        "nodemailer": "^6.9.13",
+        "otp-generator": "^4.0.1",
+        "totp-generator": "^1.0.0",
         "validator": "^13.12.0"
     },
     "devDependencies": {
