--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "license": "ISC",
     "dependencies": {
         "bcrypt": "^5.1.1",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
+        "ejs": "^3.1.10",
         "emailjs": "^4.0.3",
         "express": "^4.19.2",
         "express-rate-limit": "^7.2.0",
